--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "url": "https://github.com/Soldy/bucketrc/issues"
   },
   "homepage": "https://github.com/Soldy/bucketrc#readme",
-  "devDependencies": {
-    "interactiveConsole": "0.0.7-alpha0",
-    "nanoTest": "^0.9.9-beta9"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
